Fix error banner visibility issue

--- a/client/style.css
+++ b/client/style.css
@@ -21,6 +21,10 @@ div {
 	overflow: hidden;
 }
 
+.userVenueChoice {
+	visibility: hidden;
+}
+
 .userDiv {
 	float: left;
 	padding: 20px;
